--- a/fact-checking/2016-11-18.md
+++ b/fact-checking/2016-11-18.md
@@ -2,11 +2,69 @@ Source: https://web.archive.org/web/20161118001643/http://www.breitbart.com/
 
 # ~~LOVE TRUMPS~~ HATE: THE LEFT'S VIOLENT ATTACKS AGAINST TRUMP SUPPORTERS
 
+**NON-STATEMENT**
+
+This article is a list of attacks against Trump supporters. The headline itself is not a sentence, and so it is neither true nor false.
+
 # POLICE: ANTI-TRUMP PROTESTOR PUNCHED OFFICER IN FACE
+
+**TRUE**
+
+Confirmed by Breitbart's source: http://www.10news.com/news/donald-trump-protesters-march-through-downtown-san-diego
 
 # REID LIED ABOUT ROMNEY'S TAXES: NOW LIES ABOUT TRUMP, BANNON...
 
+**OPINION: Reid lied about Romney's taxes** 
+
+Breitbart argues Harry Reid lied about Mitt Romney's taxes on the Senate floor, saying Romney paid taxes for 10 years without offering evidence. Breitbart cites the Congressional record:
+
+https://www.gpo.gov/fdsys/pkg/CREC-2012-08-02/pdf/CREC-2012-08-02-pt1-PgS5901-5.pdf
+
+Relevant quote:
+
+> As we know, he has refused to release
+> his tax returns. If a person coming before
+> this body wanted to be a Cabinet
+> officer, he couldn’t be if he had the
+> same refusal Mitt Romney does about
+> tax returns. So the word is out that he
+> has not paid any taxes for 10 years. Let
+> him prove he has paid taxes because he
+> has not. We already know from one
+> partial tax return he gave us he has
+> money hidden in Bermuda, the Cayman
+> Islands, and a Swiss bank account. I
+> am not making that up. Mitt Romney
+> makes more money in a single day
+> than an average middle-class family
+> makes in 2 years or more. 
+
+The statement Breitbart is disputing is "the word is out that he has not paid any taxes for 10 years." Whether this was a lie depends on how we interpret Reid's statement and what we consider to constitute a lie. For example, Reid's statement could also be considered an unsubstantiated claim, or spreading a rumor. If Reid believed what he was saying, but lacked evidence, his statement was probably not a lie, but simply an unsubstantiated claim. Therefore our judgment is that whether Reid lied about Romney's taxes is a matter of opinion.
+
+**FALSE: Reid lies about Trump, Bannon**
+
+Breitbart quotes Harry Reid as saying:
+
+> According to [Southern] Poverty Law Center, Bannon “was the main driver between [sic] Breitbart becoming a white ethno-nationalist propaganda mill.” When asked to comment on Bannon’s hiring, KKK leader David Duke told CNN, “I think that’s excellent.”
+
+This quote can be found at 12:00 in the following video:
+
+https://www.youtube.com/watch?v=NFo6hJePNek
+
+Source for the SPLC quote: https://twitter.com/splcenter/status/797937732530110464
+Source for David Duke quote: http://www.cnn.com/2016/11/14/politics/white-nationalists-on-bannon/
+
+The statements Reid is quoted as making are literally true; the sources mentioned made the statements mentioned. Therefore Breitbart's claim that he lied is false, at least understanding their claim as saying that the quote they cited was a lie.
+
 # ...HYSTERICAL HARRY 'CONCERNED' THE 'WORLD WAS GOING TO END' AFTER TRUMP ELECTION 'TRAUMA'
+
+**OPINION: Harry was hysterical**
+
+**TRUE: Harry 'concerned' the 'world was going to end' after Trump election 'trauma'**
+
+The video linked in the article confirms Reid used the phrases quoted in the way suggested by the quotes:
+
+http://www.breitbart.com/video/2016/11/17/reid-after-going-through-the-trauma-of-the-election-i-was-concerned-if-the-world-was-going-to-be-destroyed/
 
 # OBAMA TEARS UP DRILLING PERMITS TO STOP COLORADO ENERGY BOOM
 
