Add a fact check.

--- a/fact-checking/2016-11-18.md
+++ b/fact-checking/2016-11-18.md
@@ -68,6 +68,18 @@ http://www.breitbart.com/video/2016/11/17/reid-after-going-through-the-trauma-of
 
 # OBAMA TEARS UP DRILLING PERMITS TO STOP COLORADO ENERGY BOOM
 
+**OPINION**
+
+Breitbart cites the following Department of Interior press release describing the termination of oil and gas leases in the White River National Forest in Colorado:
+
+https://www.doi.gov/pressreleases/secretary-jewell-announces-resolution-oil-gas-leasing-issues-colorados-white-river
+
+It's not confirmed that Obama was involved in this decision, but the Obama administration was. It's a common way of speaking to attribute everything a President's administration does to the President themselves. Interpreted this way, the statement is true. Interpreted as meaning that Obama was directly involved in the decision, it's unverified.
+
+The claim of the headline, though, is that the drilling permits were revoked in order to stop a Colorado energy boom. This is a specious assessment of the purpose of the decision; the DOI press release states that the purposes included "protecting one of Colorado’s most spectacular places and important watersheds, and ensuring that any future development is done responsibly and held to high standards."
+
+However, Breitbart could argue that we can't assume their stated motivations are their actual motivations. Breitbart's narrative is that "President Obama claims that he is Advancing American Energy, but the president has continually fought America’s oil and gas energy boom and spending tens of billions of taxpayer dollars each year to advance weak solar and wind power." By placing this decision into this narrative, they articulate what seems to us to be a legitimate opinion about the motivation behind the White River National Forest decision.
+
 # EXCLUSIVE: THREE PAKISTANI MEN APPREHENDED AT ARIZONA BORDER
 
 # SEN. STUART SMALLEY: REJECT RACISTSEXISTXENOPHOBIC BREITBART AND BANNON!
