Add fact checking.

--- a/fact-checking/2016-11-18.md
+++ b/fact-checking/2016-11-18.md
@@ -82,6 +82,20 @@ However, Breitbart could argue that we can't assume their stated motivations are
 
 # EXCLUSIVE: THREE PAKISTANI MEN APPREHENDED AT ARIZONA BORDER
 
+**UNVERIFIABLE**
+
+This is an exclusive story based on private correspondence with Customs and Border Protection, so we cannot independently fact-check it.
+
 # SEN. STUART SMALLEY: REJECT RACISTSEXISTXENOPHOBIC BREITBART AND BANNON!
 
+**FALSE**
+
+The article is unrelated to the headline. The headline you get after clicking into the article is: "Franken Urges Trump ‘to Appeal to America’s Better Angels’ and Reject Stephen Bannon." The rest of the article is about statements by Al Franken:
+
+https://web.archive.org/web/20161119024522/http://www.breitbart.com/video/2016/11/17/franken-urges-trump-to-appeal-to-americas-better-angels-and-reject-stephen-bannon/
+
+Google searching "steve smalley bannon" didn't quickly turn up a relevant quote from Smalley. Therefore rate this is aflse.
+
 # BREITBART NEWS DAILY: LEFTWING HYSTERIA
+
+**NON-STATEMENT**
