Add statement type counts.

--- a/fact-checking/2016-11-18.md
+++ b/fact-checking/2016-11-18.md
@@ -1,5 +1,13 @@
 Source: https://web.archive.org/web/20161118001643/http://www.breitbart.com/
 
+Counts for this headline page:
+
+ * **TRUE**: 2
+ * **FALSE**: 2
+ * **UNVERIFIABLE**: 1
+ * **OPINION**: 3
+ * **NON-STATEMENT**: 2
+
 # ~~LOVE TRUMPS~~ HATE: THE LEFT'S VIOLENT ATTACKS AGAINST TRUMP SUPPORTERS
 
 **NON-STATEMENT**
