Update fact check.

--- a/fact-checking/2016-11-18.md
+++ b/fact-checking/2016-11-18.md
@@ -47,7 +47,7 @@ Relevant quote:
 > than an average middle-class family
 > makes in 2 years or more. 
 
-The statement Breitbart is disputing is "the word is out that he has not paid any taxes for 10 years." Whether this was a lie depends on how we interpret Reid's statement and what we consider to constitute a lie. For example, Reid's statement could also be considered an unsubstantiated claim, or spreading a rumor. If Reid believed what he was saying, but lacked evidence, his statement was probably not a lie, but simply an unsubstantiated claim. Therefore our judgment is that whether Reid lied about Romney's taxes is a matter of opinion.
+The claim Breitbart is disputing is "So the word is out that he has not paid any taxes for 10 years. Let him prove he has paid takes because he has not." Whether this was a lie depends on how we interpret Reid's statement and what we consider to constitute a lie. For example, Reid's statement could also be considered an unsubstantiated claim, or spreading a rumor. If Reid believed what he was saying, but lacked evidence, his statement was probably not a lie, but simply an unsubstantiated claim. Therefore our judgment is that whether Reid lied about Romney's taxes is a matter of opinion.
 
 **FALSE: Reid lies about Trump, Bannon**
 
