Update fact check.

--- a/fact-checking/2016-11-18.md
+++ b/fact-checking/2016-11-18.md
@@ -92,7 +92,7 @@ However, Breitbart could argue that we can't assume their stated motivations are
 
 **UNVERIFIABLE**
 
-This is an exclusive story based on private correspondence with Customs and Border Protection, so we cannot independently fact-check it.
+This is an exclusive story based on private correspondence with Customs and Border Protection and other unnamed sources, so we cannot independently fact-check it.
 
 # SEN. STUART SMALLEY: REJECT RACISTSEXISTXENOPHOBIC BREITBART AND BANNON!
 
