Update fact check.

--- a/fact-checking/2016-11-18.md
+++ b/fact-checking/2016-11-18.md
@@ -102,7 +102,7 @@ The article is unrelated to the headline. The headline you get after clicking in
 
 https://web.archive.org/web/20161119024522/http://www.breitbart.com/video/2016/11/17/franken-urges-trump-to-appeal-to-americas-better-angels-and-reject-stephen-bannon/
 
-Google searching "steve smalley bannon" didn't quickly turn up a relevant quote from Smalley. Therefore rate this is aflse.
+Google searching "steve smalley bannon" didn't quickly turn up a relevant quote from Smalley. Therefore rate this is false.
 
 # BREITBART NEWS DAILY: LEFTWING HYSTERIA
 
