Add links to headlines.

--- a/fact-checking/2016-11-18.md
+++ b/fact-checking/2016-11-18.md
@@ -8,19 +8,23 @@ Counts for this headline page:
  * **OPINION**: 3
  * **NON-STATEMENT**: 2
 
-# ~~LOVE TRUMPS~~ HATE: THE LEFT'S VIOLENT ATTACKS AGAINST TRUMP SUPPORTERS
+All headlines are quoted and fact-checked in the form in which they are stated on the front page linked above, rather than in the form shown on the linked article page, which may differ.
+
+In some cases you may need to go to the non-archived, live version of the page to view embedded videos. Bear in mind it's possible the page has been updated since it was archived.
+
+# [~~LOVE TRUMPS~~ HATE: THE LEFT'S VIOLENT ATTACKS AGAINST TRUMP SUPPORTERS](https://web.archive.org/web/20161118152339/http://www.breitbart.com/big-government/2016/11/17/top-10-violent-actions-trump-supporters/)
 
 **NON-STATEMENT**
 
 This article is a list of attacks against Trump supporters. The headline itself is not a sentence, and so it is neither true nor false.
 
-# POLICE: ANTI-TRUMP PROTESTOR PUNCHED OFFICER IN FACE
+# [POLICE: ANTI-TRUMP PROTESTOR PUNCHED OFFICER IN FACE](https://web.archive.org/web/20161118060614/http://www.breitbart.com/california/2016/11/17/anti-trump-protester-punches-police-officer-face-san-diego/)
 
 **TRUE**
 
 Confirmed by Breitbart's source: http://www.10news.com/news/donald-trump-protesters-march-through-downtown-san-diego
 
-# REID LIED ABOUT ROMNEY'S TAXES: NOW LIES ABOUT TRUMP, BANNON...
+# [REID LIED ABOUT ROMNEY'S TAXES: NOW LIES ABOUT TRUMP, BANNON..](https://web.archive.org/web/20161118001643/http://www.breitbart.com/big-government/2016/11/17/reid-lied-romneys-taxes-now-lies-trump-bannon/)
 
 **OPINION: Reid lied about Romney's taxes** 
 
@@ -65,7 +69,7 @@ Source for David Duke quote: http://www.cnn.com/2016/11/14/politics/white-nation
 
 The statements Reid is quoted as making are literally true; the sources mentioned made the statements mentioned. Therefore Breitbart's claim that he lied is false, at least understanding their claim as saying that the quote they cited was a lie.
 
-# ...HYSTERICAL HARRY 'CONCERNED' THE 'WORLD WAS GOING TO END' AFTER TRUMP ELECTION 'TRAUMA'
+# [...HYSTERICAL HARRY 'CONCERNED' THE 'WORLD WAS GOING TO END' AFTER TRUMP ELECTION 'TRAUMA'](https://web.archive.org/web/20161119024404/http://www.breitbart.com/video/2016/11/17/reid-after-going-through-the-trauma-of-the-election-i-was-concerned-if-the-world-was-going-to-be-destroyed/)
 
 **OPINION: Harry was hysterical**
 
@@ -75,7 +79,7 @@ The video linked in the article confirms Reid used the phrases quoted in the way
 
 http://www.breitbart.com/video/2016/11/17/reid-after-going-through-the-trauma-of-the-election-i-was-concerned-if-the-world-was-going-to-be-destroyed/
 
-# OBAMA TEARS UP DRILLING PERMITS TO STOP COLORADO ENERGY BOOM
+# [OBAMA TEARS UP DRILLING PERMITS TO STOP COLORADO ENERGY BOOM](https://web.archive.org/web/20161119144335/http://www.breitbart.com/california/2016/11/17/obama-blocks-energy-boom-colorado/)
 
 **OPINION**
 
@@ -89,13 +93,13 @@ The claim of the headline, though, is that the drilling permits were revoked in 
 
 However, Breitbart could argue that we can't assume their stated motivations are their actual motivations. Breitbart's narrative is that "President Obama claims that he is Advancing American Energy, but the president has continually fought America’s oil and gas energy boom and spending tens of billions of taxpayer dollars each year to advance weak solar and wind power." By placing this decision into this narrative, they articulate what seems to us to be a legitimate opinion about the motivation behind the White River National Forest decision.
 
-# EXCLUSIVE: THREE PAKISTANI MEN APPREHENDED AT ARIZONA BORDER
+# [EXCLUSIVE: THREE PAKISTANI MEN APPREHENDED AT ARIZONA BORDER](https://web.archive.org/web/20161119150143/http://www.breitbart.com/texas/2016/11/17/exclusive-three-pakistani-men-apprehended-u-s-border/)
 
 **UNVERIFIABLE**
 
 This is an exclusive story based on private correspondence with Customs and Border Protection and other unnamed sources, so we cannot independently fact-check it.
 
-# SEN. STUART SMALLEY: REJECT RACISTSEXISTXENOPHOBIC BREITBART AND BANNON!
+# [SEN. STUART SMALLEY: REJECT RACISTSEXISTXENOPHOBIC BREITBART AND BANNON!](https://web.archive.org/web/20161119024522/http://www.breitbart.com/video/2016/11/17/franken-urges-trump-to-appeal-to-americas-better-angels-and-reject-stephen-bannon/)
 
 **FALSE**
 
@@ -105,6 +109,6 @@ https://web.archive.org/web/20161119024522/http://www.breitbart.com/video/2016/1
 
 Google searching "steve smalley bannon" didn't quickly turn up a relevant quote from Smalley. Therefore rate this is false.
 
-# BREITBART NEWS DAILY: LEFTWING HYSTERIA
+# [BREITBART NEWS DAILY: LEFTWING HYSTERIA](https://web.archive.org/web/20161119124258/http://www.breitbart.com/radio/2016/11/17/breitbart-news-daily-leftwing-hysteria/)
 
 **NON-STATEMENT**
