Add links to headlines.

--- a/fact-checking/2016-11-11.md
+++ b/fact-checking/2016-11-11.md
@@ -1,20 +1,16 @@
 Source: https://web.archive.org/web/20161111000722/http://www.breitbart.com/
 
-# GREATAGAIN.GOV
+# [GREATAGAIN.GOV](https://web.archive.org/web/20161111000947/http://www.breitbart.com/2016-presidential-race/2016/11/10/donald-trump-rolls-transition-team-website-twitter/)
 
 **NON-STATEMENT**
 
-# MEXICO FOLDS ON NAFTA
-
-https://web.archive.org/web/20161111001006/http://www.breitbart.com/border/2016/11/10/mexico-backtracks-willing-talk-nafta-trump/
+# [MEXICO FOLDS ON NAFTA](https://web.archive.org/web/20161111001006/http://www.breitbart.com/border/2016/11/10/mexico-backtracks-willing-talk-nafta-trump/)
 
 **OPINION**
 
 "Mexico folds on NAFTA" is a statement of analogy. Literally it can be interpreted as making an analogy between Mexico's change in stance on NAFTA (as reported in the AFP) and the act of folding in the game of poker. Whether such an analogy exists is not a factual question.
 
-# TWITTER EXPLODES WITH TRUMP ASSASSINATION FANTASIES
-
-https://web.archive.org/web/20161111001026/http://www.breitbart.com/2016-presidential-race/2016/11/10/twitter-explodes-donald-trump-assassination-fantasies/
+# [TWITTER EXPLODES WITH TRUMP ASSASSINATION FANTASIES](https://web.archive.org/web/20161111001026/http://www.breitbart.com/2016-presidential-race/2016/11/10/twitter-explodes-donald-trump-assassination-fantasies/)
 
 **MISLEADING**
 
