Update fact check.

--- a/fact-checking/2016-11-11.md
+++ b/fact-checking/2016-11-11.md
@@ -1,5 +1,9 @@
 Source: https://web.archive.org/web/20161111000722/http://www.breitbart.com/
 
+All headlines are quoted and fact-checked in the form in which they are stated on the front page linked above, rather than in the form shown on the linked article page, which may differ.
+
+In some cases you may need to go to the non-archived, live version of the page to view embedded videos. Bear in mind it's possible the page has been updated since it was archived.
+
 # [GREATAGAIN.GOV](https://web.archive.org/web/20161111000947/http://www.breitbart.com/2016-presidential-race/2016/11/10/donald-trump-rolls-transition-team-website-twitter/)
 
 **NON-STATEMENT**
@@ -14,6 +18,8 @@ Source: https://web.archive.org/web/20161111000722/http://www.breitbart.com/
 
 **MISLEADING**
 
-Breitbart cites seven tweets fantasizing about Donald Trump and/or Mike Pence being assassinated, as well as one tweet making the observation that some are having such fantasies. The President receives death threats on a constant basis, though the Secret Service will not say how many occur (https://www.youtube.com/watch?v=BHkvtmEyas8, 13:00-15:00).
+Breitbart cites seven tweets fantasizing about Donald Trump and/or Mike Pence being assassinated, as well as one tweet making the observation that some are having such fantasies.
+
+The President receives death threats on a constant basis, though the Secret Service will not say how many occur (https://www.youtube.com/watch?v=BHkvtmEyas8, 13:00-15:00).
 
 There is nothing implausible about Breitbart's characterization that there has been a significant and notable increase in talk of assassinating Trump and Pence since they won the election. However, the handful of examples they provide do not provide convincing evidence that there has been such a significant and notable increase, against a backdrop where the President is constantly recieving death threats, and we don't know from the Secret Service how numerous they are.
