--- a/fact-checking/2016-11-18.md
+++ b/fact-checking/2016-11-18.md
@@ -4,6 +4,7 @@ Counts for this headline page:
 
  * **TRUE**: 2
  * **FALSE**: 2
+ * **MISLEADING**: 0
  * **UNVERIFIABLE**: 1
  * **OPINION**: 3
  * **NON-STATEMENT**: 2
