Add fact check.

--- a/fact-checking/2016-11-11.md
+++ b/fact-checking/2016-11-11.md
@@ -23,3 +23,13 @@ Breitbart cites seven tweets fantasizing about Donald Trump and/or Mike Pence be
 The President receives death threats on a constant basis, though the Secret Service will not say how many occur (https://www.youtube.com/watch?v=BHkvtmEyas8, 13:00-15:00).
 
 There is nothing implausible about Breitbart's characterization that there has been a significant and notable increase in talk of assassinating Trump and Pence since they won the election. However, the handful of examples they provide do not provide convincing evidence that there has been such a significant and notable increase, against a backdrop where the President is constantly recieving death threats, and we don't know from the Secret Service how numerous they are.
+
+# [CNN BROADCASTS PROTESTER'S CALL FOR DEATH AND VIOLENCE](https://web.archive.org/web/20161111001048/http://www.breitbart.com/video/2016/11/10/anti-trump-protester-calls-death-violence-cnn/)
+
+**TRUE**
+
+Video: https://www.youtube.com/watch?v=MuOOEWbOfsU
+
+Breitbart accurately quotes a protester broadcasted on CNN saying:
+
+> If we don’t fight, then who will fight for us? People had to die for your freedom where we’re at today. We can’t just do rallies, we have to fight back. There will be casualties on both sides. There will be because people have to die to make a change in this world. Trump, enough with your racism. Stop splitting families. Don’t split my family.
