Add fact check.

--- a/fact-checking/2016-11-11.md
+++ b/fact-checking/2016-11-11.md
@@ -35,3 +35,9 @@ Breitbart accurately quotes a protester broadcasted on CNN saying:
 > If we don’t fight, then who will fight for us? People had to die for your freedom where we’re at today. We can’t just do rallies, we have to fight back. There will be casualties on both sides. There will be because people have to die to make a change in this world. Trump, enough with your racism. Stop splitting families. Don’t split my family.
 
 Interpreted literally, this quote is a call for death and violence.
+
+# [HOAX: MUSLIM STUDENT 'FABRICATED' HIJAB-GRAB BY TRUMP SUPPORTERS](https://web.archive.org/web/20161111001111/http://www.breitbart.com/texas/2016/11/10/police-muslim-student-fabricated-hijab-grab-trump-supporters/)
+
+**TRUE**
+
+Confirmed by Breitbart's source: https://web.archive.org/web/20161111010708/http://klfy.com/2016/11/10/lafayette-pd-ul-student-made-up-story-about-attack-stolen-hijab/
