--- a/fact-checking/2016-11-11.md
+++ b/fact-checking/2016-11-11.md
@@ -30,7 +30,7 @@ There is nothing implausible about Breitbart's characterization that there has b
 
 Video: https://www.youtube.com/watch?v=MuOOEWbOfsU
 
-Breitbart accurately quotes a protester broadcasted on CNN saying:
+Breitbart accurately quotes a protester broadcast on CNN saying:
 
 > If we don’t fight, then who will fight for us? People had to die for your freedom where we’re at today. We can’t just do rallies, we have to fight back. There will be casualties on both sides. There will be because people have to die to make a change in this world. Trump, enough with your racism. Stop splitting families. Don’t split my family.
 
