Add fact check.

--- a/fact-checking/2016-11-11.md
+++ b/fact-checking/2016-11-11.md
@@ -41,3 +41,9 @@ Interpreted literally, this quote is a call for death and violence.
 **TRUE**
 
 Confirmed by Breitbart's source: https://web.archive.org/web/20161111010708/http://klfy.com/2016/11/10/lafayette-pd-ul-student-made-up-story-about-attack-stolen-hijab/
+
+# [BOLTON: GOP CANDIDATES 'WHO BACKED AWAY FROM TRUMP' LOST](https://web.archive.org/web/20161111001131/http://www.breitbart.com/radio/2016/11/10/bolton-republican-candidates-backed-away-trump-lost/)
+
+**TRUE**
+
+Headline is an accurate summary of some of Bolton's statements quoted in the article.
