Add headline counts.

--- a/fact-checking/2016-11-11.md
+++ b/fact-checking/2016-11-11.md
@@ -1,5 +1,14 @@
 Source: https://web.archive.org/web/20161111000722/http://www.breitbart.com/
 
+Counts for this headline page:
+
+ * **TRUE**: 3
+ * **FALSE**: 0
+ * **MISLEADING**: 1
+ * **UNVERIFIABLE**: 0
+ * **OPINION**: 1
+ * **NON-STATEMENT**: 1
+
 All headlines are quoted and fact-checked in the form in which they are stated on the front page linked above, rather than in the form shown on the linked article page, which may differ.
 
 In some cases you may need to go to the non-archived, live version of the page to view embedded videos. Bear in mind it's possible the page has been updated since it was archived.
