Add fact check.

--- a/fact-checking/2016-11-04.md
+++ b/fact-checking/2016-11-04.md
@@ -2,12 +2,12 @@ Source: https://web.archive.org/web/20161104001702/http://www.breitbart.com/
 
 Counts for this headline page:
 
- * **TRUE**: 0
+ * **TRUE**: 1
  * **FALSE**: 0
  * **MISLEADING**: 0
  * **UNVERIFIABLE**: 0
  * **OPINION**: 0
- * **NON-STATEMENT**: 0
+ * **NON-STATEMENT**: 1
 
 All headlines are quoted and fact-checked in the form in which they are stated on the front page linked above, rather than in the form shown on the linked article page, which may differ.
 
@@ -18,3 +18,13 @@ In some cases you may need to go to the non-archived, live version of the page t
 **TRUE**
 
 Breitbart quotes Ivanka Trump from an exclusive interview. Quotes from Ivanka in the article support the sentiment conveyed by the phrase "not working" which Breitbart appended to the quoted phrase. This quote is not repeated elsewhere in the article. Unless they are misquoting her, there's no reason for skepticism about their conveyance of her sentiments in this headline.
+
+# [WATCH LIVE: TRUMP IN SELMA, NC](http://www.breitbart.com/video/2016/11/03/watch-live-donald-trump-selma-nc/)
+
+**NON-STATEMENT**
+
+# [TED CRUZ IN IOWA: 'I'M HERE CAMPAIGNING FOR TRUMP, PENCE' ... 'ONE LIBERAL JUSTICE AWAY FROM LOSING OUR CONSTITUTIONAL RIGHTS'](https://web.archive.org/web/20161104001702/http://www.breitbart.com/)
+
+**TRUE**
+
+Breitbart quotes statements made by Ted Cruz "[a]t a small joint press event with Pence and Cruz after the rally and just outside the Trump-Pence plane."
