Update fact checking, incl. rename 'Unverifiable' to 'Sole Source.'

--- a/fact-checking/2016-11-11.md
+++ b/fact-checking/2016-11-11.md
@@ -5,7 +5,7 @@ Counts for this headline page:
  * **TRUE**: 3
  * **FALSE**: 0
  * **MISLEADING**: 1
- * **UNVERIFIABLE**: 0
+ * **SOLE SOURCE**: 0
  * **OPINION**: 1
  * **NON-STATEMENT**: 1
 
