--- a/fact-checking/2016-11-18.md
+++ b/fact-checking/2016-11-18.md
@@ -5,7 +5,7 @@ Counts for this headline page:
  * **TRUE**: 2
  * **FALSE**: 2
  * **MISLEADING**: 0
- * **UNVERIFIABLE**: 1
+ * **SOLE SOURCE**: 1
  * **OPINION**: 3
  * **NON-STATEMENT**: 2
 
@@ -96,7 +96,7 @@ However, Breitbart could argue that we can't assume their stated motivations are
 
 # [EXCLUSIVE: THREE PAKISTANI MEN APPREHENDED AT ARIZONA BORDER](https://web.archive.org/web/20161119150143/http://www.breitbart.com/texas/2016/11/17/exclusive-three-pakistani-men-apprehended-u-s-border/)
 
-**UNVERIFIABLE**
+**SOLE SOURCE**
 
 This is an exclusive story based on private correspondence with Customs and Border Protection and other unnamed sources, so we cannot independently fact-check it.
 
