Update fact check.

--- a/fact-checking/2016-11-11.md
+++ b/fact-checking/2016-11-11.md
@@ -55,4 +55,6 @@ Confirmed by Breitbart's source: https://web.archive.org/web/20161111010708/http
 
 **TRUE**
 
-Headline is an accurate summary of some of Bolton's statements quoted in the article.
+Headline is an accurate summary of some of Bolton's statements on their radio show. Recording available here:
+
+https://soundcloud.com/breitbart/breitbart-news-daily-john-bolton-november-10-2016
