Add fact check.

--- a/fact-checking/2016-11-04.md
+++ b/fact-checking/2016-11-04.md
@@ -28,3 +28,9 @@ Breitbart quotes Ivanka Trump from an exclusive interview. Quotes from Ivanka in
 **SOLE SOURCE**
 
 Breitbart quotes statements made by Ted Cruz "[a]t a small joint press event with Pence and Cruz after the rally and just outside the Trump-Pence plane."
+
+# [WITH HER: GANG OF EIGHT SENATOR JEFF FLAKE SAYS VOTING FOR MCMULLIN 'A POSSIBILITY'](https://web.archive.org/web/20161104001702/http://www.breitbart.com/2016-presidential-race/2016/11/03/gang-of-eight-senator-jeff-flake-voting-for-evan-mcmullin-over-trump-a-possibility/)
+
+**TRUE**
+
+ABC news confirms: http://abcnews.go.com/Politics/republican-sen-jeff-flake-write-evan-mcmullin/story?id=43255597
