--- a/fact-checking/2016-11-04.md
+++ b/fact-checking/2016-11-04.md
@@ -5,7 +5,7 @@ Counts for this headline page:
  * **TRUE**: 1
  * **FALSE**: 0
  * **MISLEADING**: 0
- * **SOLE SOURCE**: 2
+ * **SOLE SOURCE**: 3
  * **OPINION**: 0
  * **NON-STATEMENT**: 1
 
@@ -34,3 +34,9 @@ Breitbart quotes statements made by Ted Cruz "[a]t a small joint press event wit
 **TRUE**
 
 ABC news confirms: http://abcnews.go.com/Politics/republican-sen-jeff-flake-write-evan-mcmullin/story?id=43255597
+
+# [EXCLUSIVE -- INTERNAL ISIS COMMUNICATIONS DURING MOSUL BATTLE: 'I CAN SMELL HEAVEN ALREADY!'](https://web.archive.org/web/20161105140057/http://www.breitbart.com/jerusalem/2016/11/03/internal-communication-discloses-morale-islamic-state-troops-battle-mosul/)
+
+**SOLE SOURCE**
+
+Breitbart says they obtained access to encrypted communications on the messaging app Telegram.
