Add fact check.

--- a/fact-checking/2016-11-04.md
+++ b/fact-checking/2016-11-04.md
@@ -2,7 +2,7 @@ Source: https://web.archive.org/web/20161104001702/http://www.breitbart.com/
 
 Counts for this headline page:
 
- * **TRUE**: 1
+ * **TRUE**: 2
  * **FALSE**: 0
  * **MISLEADING**: 0
  * **SOLE SOURCE**: 3
@@ -40,3 +40,9 @@ ABC news confirms: http://abcnews.go.com/Politics/republican-sen-jeff-flake-writ
 **SOLE SOURCE**
 
 Breitbart says they obtained access to encrypted communications on the messaging app Telegram.
+
+# ['ALWAYS BEEN A YANKEES FAN' HILLARY NOW CUBS FAN 'ALL MY LIFE'](https://web.archive.org/web/20161108215835/http://www.breitbart.com/sports/2016/11/03/hillary-clinton-cubs-world-series-victory-ive-fan-life/)
+
+**TRUE**
+
+Lynn Sweet, a reporter for the Chicago Sun Times who says she has covered Clinton for many years, confirms: https://web.archive.org/news/hillarys-baseball-politics-a-cubs-yankees-saga/
