Add fact check.

--- a/fact-checking/2016-11-04.md
+++ b/fact-checking/2016-11-04.md
@@ -5,7 +5,7 @@ Counts for this headline page:
  * **TRUE**: 2
  * **FALSE**: 0
  * **MISLEADING**: 0
- * **SOLE SOURCE**: 3
+ * **SOLE SOURCE**: 4
  * **OPINION**: 0
  * **NON-STATEMENT**: 1
 
@@ -46,3 +46,9 @@ Breitbart says they obtained access to encrypted communications on the messaging
 **TRUE**
 
 Lynn Sweet, a reporter for the Chicago Sun Times who says she has covered Clinton for many years, confirms: https://web.archive.org/news/hillarys-baseball-politics-a-cubs-yankees-saga/
+
+# [TRUMP, CLINTON FACE OFF ON TARMAC IN NORTH CAROLINA](https://web.archive.org/web/20161104163504/http://www.breitbart.com/big-government/2016/11/03/trump-clinton-planes-meet-tarmac-north-carolina/)
+
+**SOLE SOURCE**
+
+Joel B. Pollak recounts the event, and gives a photo he says he took of Clinton's plane, apparently from within Trump's plane.
