Add fact check.

--- a/fact-checking/2016-11-04.md
+++ b/fact-checking/2016-11-04.md
@@ -2,7 +2,7 @@ Source: https://web.archive.org/web/20161104001702/http://www.breitbart.com/
 
 Counts for this headline page:
 
- * **TRUE**: 2
+ * **TRUE**: 3
  * **FALSE**: 0
  * **MISLEADING**: 0
  * **SOLE SOURCE**: 4
@@ -52,3 +52,9 @@ Lynn Sweet, a reporter for the Chicago Sun Times who says she has covered Clinto
 **SOLE SOURCE**
 
 Joel B. Pollak recounts the event, and gives a photo he says he took of Clinton's plane, apparently from within Trump's plane.
+
+# ['NOT FOR THIS CHANNEL': JOHN PODESTA REMINDS HILLARY NOT TO DISCUSS FOREIGN POLICY INTEL OVER EMAIL](https://web.archive.org/web/20161104162440/http://www.breitbart.com/2016-presidential-race/2016/11/03/not-channel-john-podesta-reminds-hillary-not-discuss-international-intrigue-email/)
+
+**TRUE**
+
+WikiLeaks confirms: https://web.archive.org/web/20161107200309/https://wikileaks.org/podesta-emails/emailid/43648
