Add fact check.

--- a/fact-checking/2016-11-04.md
+++ b/fact-checking/2016-11-04.md
@@ -5,7 +5,7 @@ Counts for this headline page:
  * **TRUE**: 3
  * **FALSE**: 0
  * **MISLEADING**: 0
- * **SOLE SOURCE**: 4
+ * **SOLE SOURCE**: 5
  * **OPINION**: 0
  * **NON-STATEMENT**: 1
 
@@ -58,3 +58,9 @@ Joel B. Pollak recounts the event, and gives a photo he says he took of Clinton'
 **TRUE**
 
 WikiLeaks confirms: https://web.archive.org/web/20161107200309/https://wikileaks.org/podesta-emails/emailid/43648
+
+# [JORDAN: DOJ OFFICIALS KADZIK 'NEED TO GO' AFTER LEAKED EMAIL](https://web.archive.org/web/20161104001702/http://www.breitbart.com/)
+
+**SOLE SOURCE**
+
+Breitbart quotes Rep. Jim Jordan from statements they say he made to them.
